--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
     <script src="https://kit.fontawesome.com/005ad9d070.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="media.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
+    <div class="for-load-screen">
+      <img src="./preloader.gif" alt="gif">
+    </div>
+    <nav class="navbar navbar-expand-lg" id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="./logo.png" alt="logo"/></a>
         <button
@@ -604,6 +611,7 @@
     <h5>© 2022 Seppo WordPress Theme by <span> CocoBasic</span></h5>
   </div>
 </footer>
+<script src="./index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
